--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,15 @@ background-position: center;
 background-size: cover;
 }
 
+@media 
+(-webkit-min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi), 
+(min-resolution: 2dppx) {
+  .hero-banner {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office@2x.jpg);
+  }
+}
+
 .hero-banner-title {
   margin: 0 auto 48px;
   max-width: 496px;
@@ -197,6 +206,7 @@ background-size: cover;
 .hero-banner-button:focus {
   background-color: #404BBF;
 }
+
 
 /* Section 2 Benefits */
 .benefits{
